add logshipper in service and api, k8s and swagger
